@@ -40,10 +40,11 @@ if __name__ == "__main__":
             # If you need the GUI of this project in your project, add
             # "thisproject[GUI]" to your install_requires
             # Graphical User Interface
-            'GUI':  ["wxPython", "chaco", "opencv"],
+            'GUI':  ["wxPython", "chaco", "imageio"],
             # kiwisolver?
         },
-        install_requires=["appdirs", "dclab",
+        install_requires=["appdirs",
+                          "dclab",
                           "NumPy>=1.7.0",
                           "SciPy>=0.10.0",
                           "pyper"],
